fix: added event for database to disk
